--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,25 @@
         </form>
 
         <h2>Shortened URLs</h2>
-        <ul >{{shortened_urls}}</ul>
+        <ul >
+            <!-- {{shortened_urls}} -->
+                <!-- Object.entries(links)
+                 .map(
+                    ([shortCode,url])=>{
+                        url=url.length>=30 ? `${url.slice(0,30)}...` : url;
+                        return `<li><a href="/${shortCode}" target="_blank">${host}/${shortCode}</a> -> ${url}</li>`
+        })
+            .join(""); -->
+
+            <% Object.entries(links).map(([shortCode,url])=> { %>
+                <%  const truncatedURL=url.length>=30 ? `${url.slice(0,50)}...` : url %>
+            <li>
+                <a href="/<%= shortCode %>" target ="_blank">
+                <%= host %>/<%= shortCode %>
+                </a>-> <%= url %>
+            </li>
+        <% }) %>
+        </ul>
     </div>
 
     <script>
